--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,7 +6,9 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+.card {
+  border-radius: 5% !important;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -26,6 +28,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+input {
+  height: 65px !important;
 }
 
 @keyframes App-logo-spin {
