--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 html {
-  height: 100%;
+  height: 100vh;
 }
 body {
-  background: rgba(95, 158, 160) !important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,13 +9,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-image: url('https://miro.medium.com/focal/1200/1200/52/55/1*k76eTmTfhxheqmd0noPVOA.jpeg'); */
-  /* background: rgb(26, 162, 189); */
-  /* background: linear-gradient(
+  background: rgb(26, 162, 189);
+  background: linear-gradient(
     321deg,
-    rgba(26, 162, 189, 1) 5%,
+    rgba(26, 162, 189, 1) 10%,
     rgba(0, 97, 113, 1) 53%,
     rgba(95, 158, 160)
-  ); */
+  );
 }
 
 @keyframes gradient {
