--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,16 +2,19 @@
   text-align: center;
 }
 
-.form-control-lg {
-  font-size: 1.1em !important;
-}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  box-shadow: 10px 10px 10px rgb(0 0 0 / 20%);
 }
 .card {
   border-radius: 5% !important;
 }
+.icon {
+  padding-left: 5px;
+  font-size: 24px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,6 +38,28 @@
 
 input {
   height: 65px !important;
+  background: aliceblue !important;
+  color: rgb(40, 13, 95) !important;
+  position: relative !important;
+  font-weight: 500 !important;
+  outline: none !important;
+  flex: 1 1 auto !important;
+  font-size: 16px !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  padding: 0 px !important;
+  appearance: textfield !important;
+}
+.card {
+  box-shadow: 10px 10px 10px rgb(0 0 0 / 20%);
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none !important;
+  border: none !important;
 }
 .settings_slippage {
   position: absolute;
