--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-html {
-  height: 100vh;
-}
+html,
 body {
   margin: 0;
+  min-height: 120%;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
