--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,6 +10,7 @@
 .card {
   border-radius: 5% !important;
 }
+
 .icon {
   padding-left: 5px;
   font-size: 24px;
@@ -92,4 +93,46 @@ nav2 {
   color: #fff;
   background-color: #585858 !important;
   border-color: #585858 !important;
+}
+
+.main {
+  animation: fadein 2s;
+  -moz-animation: fadein 2s; /* Firefox */
+  -webkit-animation: fadein 2s; /* Safari and Chrome */
+  -o-animation: fadein 2s; /* Opera */
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadein {
+  /* Firefox */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fadein {
+  /* Safari and Chrome */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-o-keyframes fadein {
+  /* Opera */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
