--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,6 +16,10 @@
   font-size: 24px;
 }
 
+#loader {
+  color: white;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
