price impact issue fixed

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -25,6 +25,11 @@
   color: white;
 }
 
+.confirm {
+  position: relative;
+  bottom: 10px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -33,7 +38,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
